ceate test event ent to end flow works

--- a/src/admin/admin-page/admin-page.component.html
+++ b/src/admin/admin-page/admin-page.component.html
@@ -3,5 +3,6 @@
     <create-schema></create-schema>
   </mat-tab>
   <mat-tab label="Test Event">
+    <test-event></test-event>
   </mat-tab>
 </mat-tab-group>
