--- a/src/admin/admin-page/create-schema/schema-editor/schema-editor.component.html
+++ b/src/admin/admin-page/create-schema/schema-editor/schema-editor.component.html
@@ -1,4 +1,4 @@
 <form [formGroup]="form">
 
-    <json-editor [options]="editorOptions" formControlName="schemaInput"></json-editor>
+    <json-editor [options]="editorOptions" formControlName="schemaInput" (change)='onChange()'></json-editor>
 </form>
