--- a/src/admin/admin-page/test-event/schemas-input/schemas-input.component.html
+++ b/src/admin/admin-page/test-event/schemas-input/schemas-input.component.html
@@ -1,9 +1,9 @@
 <form class="example-form">
     <mat-form-field class="example-full-width" appearance="fill">
-      <mat-label>Number</mat-label>
+      <mat-label>pick schema id</mat-label>
       <input type="text"
              placeholder="Pick one"
-             aria-label="Number"
+             aria-label="Schema Id"
              matInput
              [formControl]="myControl"
              [matAutocomplete]="auto">
