--- a/src/admin/admin-page/test-event/schemas-input/schemas-input.component.html
+++ b/src/admin/admin-page/test-event/schemas-input/schemas-input.component.html
@@ -1,11 +1,10 @@
-<form class="example-form">
-    <mat-form-field class="example-full-width" appearance="fill">
+<form>
+    <mat-form-field>
       <mat-label>pick schema id</mat-label>
       <input type="text"
              placeholder="Pick one"
              aria-label="Schema Id"
              matInput
-             [formControl]="myControl"
              [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete" (optionSelected)='changeId($event.option.value)'>
         <!-- <mat-option *ngFor="let option of filteredOptions | async" [value]="option"> -->
