--- a/src/dashboard-page/create-chart-dialog/create-chart-dialog.component.html
+++ b/src/dashboard-page/create-chart-dialog/create-chart-dialog.component.html
@@ -1,1 +1,1 @@
-<button mat-raised-button (click)="openDialog()">Create new chart</button>
+<button class="open-create-chart-dialog" mat-raised-button (click)="openDialog()">Create new chart</button>
