--- a/src/dashboard-page/dashboard-page.component.css
+++ b/src/dashboard-page/dashboard-page.component.css
@@ -1,4 +1,12 @@
 chart-items {
 display: flex;
   flex-wrap: wrap;
+    width: 80%;
+    margin: auto;
+    place-content: space-evenly
+  
+}
+
+button {
+  background-color: salmon;
 }
