--- a/src/admin/admin-page/test-event/event-form/event-form.component.html
+++ b/src/admin/admin-page/test-event/event-form/event-form.component.html
@@ -1,4 +1,4 @@
 <form [formGroup]="form" (ngSubmit)="submit()" *ngIf="fields">
     <formly-form [fields]="fields" [form]="form"></formly-form>
-    <button type="submit" class="btn btn-primary submit-button" [disabled]="!form.valid">Submit</button>
+    <button type="submit" mat-raised-button  class="btn btn-primary submit-button" [disabled]="!form.valid">Submit</button>
   </form>
