adding header component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<mat-slide-toggle (click)="changePage()">
-    {{title}}</mat-slide-toggle>
-<admin-page *ngIf="page=='admins'"></admin-page>
+<app-header (clickToggle)="changePage()" [title]="title"></app-header>
+    <admin-page *ngIf="page=='admins'"></admin-page>
 <dashboard-page *ngIf="page=='dashboards'"></dashboard-page>
