add form validation to create chart form

--- a/src/dashboard-page/create-chart-dialog/create-chart-dialog-content/create-chart-dialog-content.component.html
+++ b/src/dashboard-page/create-chart-dialog/create-chart-dialog-content/create-chart-dialog-content.component.html
@@ -4,39 +4,40 @@
     </h1>
     <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>pick chart type</mat-label>
-        <input formControlName ="selectedChartType" type="text" placeholder="Pick one" aria-label="Chart Type" matInput [matAutocomplete]="auto2">
-        <mat-autocomplete #auto2="matAutocomplete">
+        <input required formControlName ="selectedChartType" type="text" placeholder="Pick one" aria-label="Chart Type" matInput [matAutocomplete]="auto2">
+        <mat-autocomplete #auto2="matAutocomplete" (optionSelected)="initForm($event)">
             <mat-option *ngFor="let option of chartTypes | keyvalue" [value]="option.key">
                 {{option.key}}
             </mat-option>
         </mat-autocomplete>
     </mat-form-field>
-    <schemas-input (changeIdEvent)="getSchema($event)" *ngIf="isNotLineChart()">
+    <schemas-input [required]="isNotLineChart()" (changeIdEvent)="getSchema($event)" *ngIf="isNotLineChart()">
 
     </schemas-input>
 
 
     <mat-form-field class="example-full-width" appearance="fill" *ngIf="isNotLineChart()">
         <mat-label>pick schema property</mat-label>
-        <input formControlName ="selectedProperty" type="text" placeholder="Pick one" aria-label="Schema Id" matInput [matAutocomplete]="auto1">
+        <input [required]="isNotLineChart()"  formControlName ="selectedProperty" type="text" placeholder="Pick one" aria-label="Schema Id" matInput [matAutocomplete]="auto1">
         <mat-autocomplete #auto1="matAutocomplete">
-            <mat-option *ngFor="let option of properties" [value]="option">
+            <mat-option *ngFor="let option of propertiesNames" [value]="option">
                 {{option}}
             </mat-option>
         </mat-autocomplete>
     </mat-form-field>
     <mat-form-field class="example-full-width" appearance="fill" *ngIf="!isNotLineChart()">
         <mat-label>pick interval</mat-label>
-        <input type="number" formControlName="selectedIntervalNumber"  placeholder="Pick one" aria-label="interval value" matInput>
+        <input [required]="!isNotLineChart()" type="number" formControlName="selectedIntervalNumber"  placeholder="Pick one" aria-label="interval value" matInput>
     </mat-form-field>
     <mat-form-field  class="example-full-width" appearance="fill" *ngIf="!isNotLineChart()">
         <mat-label>pick interval unit</mat-label>
-        <input formControlName="selectedIntervalUnit" type="text" placeholder="Pick one" aria-label="intervalUnit" matInput [matAutocomplete]="auto1">
+        <input [required]="!isNotLineChart()" formControlName="selectedIntervalUnit" type="text" placeholder="Pick one" aria-label="intervalUnit" matInput [matAutocomplete]="auto1">
         <mat-autocomplete #auto1="matAutocomplete">
             <mat-option *ngFor="let option of intervalUnits" [value]="option">
                 {{option}}
             </mat-option>
         </mat-autocomplete>
     </mat-form-field> 
-    <button type="submit" mat-raised-button [disabled]="!createChartForm.valid">create schema</button>
+    <!-- <button type="submit" mat-raised-button [disabled]="!createChartForm.valid">create schema</button> -->
+    <button type="submit" mat-raised-button [disabled]="!shouldEnable()">create schema</button>
 </form>
