--- a/src/admin/admin-page/test-event/schemas-input/schemas-input.component.html
+++ b/src/admin/admin-page/test-event/schemas-input/schemas-input.component.html
@@ -4,7 +4,7 @@
       <input type="text"
              placeholder="Pick one"
              aria-label="Schema Id"
-             matInput
+             matInput [required]="required"
              [matAutocomplete]="auto">
       <mat-autocomplete #auto="matAutocomplete" (optionSelected)='changeId($event.option.value)'>
         <!-- <mat-option *ngFor="let option of filteredOptions | async" [value]="option"> -->
